@@ -15,6 +15,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -77,8 +78,8 @@ public class CohortController {
         String name = cohortRequest.getName();
         if (name.isBlank()) return new ResponseEntity<>("Name cannot be blank", HttpStatus.BAD_REQUEST);
 
-        String startDate = cohortRequest.getStart_date();
-        String endDate = cohortRequest.getEnd_date();
+        String startDate = cohortRequest.getStartDate();
+        String endDate = cohortRequest.getEndDate();
         if (startDate.isBlank() || endDate.isBlank()) return new ResponseEntity<>("Date cannot be blank", HttpStatus.BAD_REQUEST);
 
         Cohort cohort = new Cohort(cohortRequest.getName(), course, LocalDate.parse(startDate), LocalDate.parse(endDate));
@@ -97,13 +98,22 @@ public class CohortController {
         String name = cohortRequest.getName();
         if (name.isBlank()) return new ResponseEntity<>("Name cannot be blank", HttpStatus.BAD_REQUEST);
 
-        String startDate = cohortRequest.getStart_date();
-        String endDate = cohortRequest.getEnd_date();
+        String startDate = cohortRequest.getStartDate();
+        String endDate = cohortRequest.getEndDate();
 
         if (startDate.isBlank() || endDate.isBlank())
             return new ResponseEntity<>("Date cannot be blank", HttpStatus.BAD_REQUEST);
 
-        List<Profile> profiles = profileRepository.findAll().stream().filter(it -> cohortRequest.getProfileIds().contains(it.getId())).toList();
+        List<Profile> profiles = profileRepository.findAll().stream().filter(it -> cohortRequest.getProfileIds().contains(it.getId())).collect(Collectors.toList());
+        for (Profile oldProfile : new ArrayList<>(cohort.getProfiles())) {
+            if (!profiles.contains(oldProfile)) {
+                oldProfile.setCohort(null);
+            }
+        }
+
+        for (Profile newProfile : profiles) {
+            newProfile.setCohort(cohort);
+        }
 
         cohort.setProfiles(profiles);
         cohort.setCourse(course);
@@ -113,78 +123,6 @@ public class CohortController {
 
         return ResponseEntity.ok(cohortRepository.save(cohort));
     }
-
-
-//    @PatchMapping("{id}")
-//    public ResponseEntity<?> editCohortById(@PathVariable int id, @RequestBody CohortRequest cohortRequest){
-//        Cohort cohort = cohortRepository.findById(id).orElse(null);
-//        if (cohort == null){
-//            return new ResponseEntity<>("Cohort not found", HttpStatus.NOT_FOUND);
-//        }
-//
-//        List<Profile> profilesToInclude = cohortRequest.getProfileIds().stream()
-//                .map(profileId -> profileRepository.findById(profileId)
-//                .orElseThrow(() -> new RuntimeException("Profile with id " + profileId + " not found")))
-//                .toList();
-//
-//        List<Course> courses = cohortRequest.getCourseIds().stream()
-//                .map(courseId -> courseRepository.findById(courseId)
-//                .orElseThrow(() -> new RuntimeException("Profile with id " + courseId + " not found")))
-//                .collect(Collectors.toList());
-//
-//        if (cohortRequest.getName().isBlank()) {
-//            return new ResponseEntity<>("Name cannot be blank", HttpStatus.BAD_REQUEST);
-//        }
-//
-//        if (cohortRequest.getStart_date().isBlank() || cohortRequest.getEnd_date().isBlank()) {
-//            return new ResponseEntity<>("Date cannot be blank", HttpStatus.BAD_REQUEST);
-//        }
-//
-//        cohort.setCohort_courses(courses);
-//
-//        List<User> usersToInclude = userRepository.findAll().stream().filter(it ->
-//                profilesToInclude.contains(it.getProfile())).toList();
-//
-//        List<User> usersToExclude = userRepository.findAll().stream().filter(it ->
-//                it.getCohort().getId() == cohort.getId() && !(profilesToInclude.contains(it.getProfile()))).toList();
-//
-//        List<Profile> profilesToExclude = usersToExclude.stream().map(User::getProfile).toList().stream().filter(it ->
-//                it.getCohort().getId() == cohort.getId() && !(profilesToInclude.contains(it))).toList();
-//
-//        cohort.setName(cohortRequest.getName());
-//        cohort.setStartDate(LocalDate.parse(cohortRequest.getStart_date()));
-//        cohort.setEndDate(LocalDate.parse(cohortRequest.getEnd_date()));
-//
-//        Cohort cohortRes = cohortRepository.findById(99).orElse(null);
-//        if (cohortRes == null) {
-//            return new ResponseEntity<>("Could not find RESERVE", HttpStatus.BAD_REQUEST);
-//        }
-//
-//        for (User user: usersToExclude){
-//            user.setCohort(cohortRes);
-//        }
-//
-//        for (Profile profile: profilesToExclude){
-//            profile.setCohort(cohortRes);
-//            List<Profile> prevProf = cohortRes.getProfiles();
-//            prevProf.add(profile);
-//            cohortRes.setProfiles(prevProf);
-//        }
-//
-//        for (User user: usersToInclude){
-//            user.setCohort(cohort);
-//        }
-//        for (Profile prof : profilesToInclude){
-//            prof.setCohort(cohort);
-//        }
-//        profileRepository.saveAll(profilesToInclude);
-//        profileRepository.saveAll(profilesToExclude);
-//        userRepository.saveAll(usersToInclude);
-//        userRepository.saveAll(usersToExclude);
-//        cohortRepository.save(cohortRes);
-//
-//        return new ResponseEntity<>(cohortRepository.save(cohort), HttpStatus.OK);
-//    }
 
     @PatchMapping("/teacher/{id}")
     public ResponseEntity<?> addStudentToCohort(@PathVariable int id, @RequestBody ProfileRequest profileRequest){
